# f4-foc

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
src/: foc.rs  main.rs
src/peripherals/: at5048a.rs  mod.rs  pwm_driver.rs  usbserial.rs
